# coding-review-agent-loop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: local_agent_loop.md
src/coding_review_agent_loop/: __init__.py  cli.py  config.py  errors.py  github.py  logging.py  memory.py  orchestrator.py  prompts.py  protocol.py  runner.py  workdirs.py
src/coding_review_agent_loop/agents/: __init__.py  base.py  claude.py  codex.py  gemini.py  registry.py
tests/: test_agent_loop.py
