[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-review-agent-loop"
version = "0.1.0"
description = "Local Claude/Codex/Gemini coding PR review loop orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wild Wind" }]
keywords = ["agents", "codex", "claude", "gemini", "github", "code-review"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
agent-loop = "coding_review_agent_loop.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
